--- a/web/frontend/public/index.html
+++ b/web/frontend/public/index.html
@@ -11,7 +11,7 @@
 			crossorigin="anonymous"
 		>
 		<link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-		<link rel="stylesheet" href="/dist/css/style.min.css">
+		<link rel="stylesheet" href="/css/style.min.css">
 		<title>Memehub</title>
 	</head>
 	<body>
